--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/public/icons8-subasta-30.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+    <link href="src\output.css" rel="stylesheet">
     <title>Subasta</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
+    
   </body>
 </html>
